# rxs-aoi-tester

./: CMakeLists.txt  README.md  SECURITY.md
AoiTester/: CMakeLists.txt
AoiTester/Aoi_ui/: AxisInfoCtr.cpp  AxisInfoCtr.h  AxisInfoCtr.ui  CMakeLists.txt  VersionInfo.rc  axmotion.cpp  axmotion.h  axmotion.ui  boundingBoxEditorDlg.ui  ccApplication.cpp  ccApplication.h  ccBoundingBoxEditorDlg.cpp  ccBoundingBoxEditorDlg.h  ccClippingBoxRepeatDlg.cpp  ccClippingBoxRepeatDlg.h  ccClippingBoxTool.cpp  ccClippingBoxTool.h  ccCommon.h  ccComparisonDlg.cpp  ccComparisonDlg.h  ccConsole.cpp  ccConsole.h  ccContourExtractor.cpp  ccContourExtractor.h  ccContourExtractorDlg.cpp  ccContourExtractorDlg.h  ccCropTool.cpp  ccCropTool.h  ccDBRoot.cpp  ccDBRoot.h  ccGraphicalSegmentationTool.cpp  ccGraphicalSegmentationTool.h  ccHistogramWindow.cpp  ccHistogramWindow.h  ccItemSelectionDlg.cpp  ccItemSelectionDlg.h  ccOrderChoiceDlg.cpp  ccOrderChoiceDlg.h  ccPersistentSettings.h  ccPointPairRegistrationDlg.cpp  (+73 more)
AoiTester/Aoi_ui/flowchart/: arrow.cpp  coloridentification.cpp  coloridentification.h  coloridentification.ui  conditionscomparison.h  conditionscomparison.ui  convertformatform.cpp  dataoutset.cpp  diagramitem.cpp  diagramitem.h  diagramscene.cpp  diagramscene.h  diagramscene.qrc  diagramtextitem.cpp  flowchart.cpp  flowchart.h  focuslensform.cpp  focuslensform.h  focuslensform.ui  form.cpp  form.h  form.ui  hdrparam.h  hdrparam.ui  imgoutparam.cpp  imgoutparam.ui  imgsrcinform.cpp  imgsrcinform.ui  lambertianphotometricstereo.cpp  lambertianphotometricstereo.h  lambertianphotometricstereo.ui  lightsourceform.cpp  lightsourceform.h  lightsourceform.ui  motionmovparamform.cpp  motionmovparamform.h  motionmovparamform.ui  pcarclenform.cpp  pcarclenform.h  pcarclenform.ui  (+51 more)
AoiTester/Aoi_ui/pluginManager/: CMakeLists.txt  ccPluginInfoDlg.cpp  (+5 more)
AoiTester/CC/: CMakeLists.txt
AoiTester/common/: CMakeLists.txt  cameraParamDlg.ui  ccApplicationBase.cpp  ccApplicationBase.h  ccCameraParamEditDlg.cpp  ccCameraParamEditDlg.h  ccDisplayOptionsDlg.cpp  ccDisplayOptionsDlg.h  ccOptions.cpp  ccOptions.h  ccOverlayDialog.cpp  ccOverlayDialog.h  ccPickOneElementDlg.cpp  ccPickOneElementDlg.h  ccPickingHub.cpp  ccPickingHub.h  ccPickingListener.h  ccPluginManager.cpp  ccPluginManager.h  ccQtHelpers.h  ccStereoModeDlg.cpp  ccStereoModeDlg.h  ccTranslationManager.cpp  ccTranslationManager.h  displayOptionsDlg.ui
AoiTester/plugins/: CMakeLists.txt  ccCommandLineInterface.h  ccDefaultPluginInterface.cpp  ccDefaultPluginInterface.h  ccGLPluginInterface.h  ccIOPluginInterface.h  ccMainAppInterface.h  ccPluginInterface.h  ccStdPluginInterface.h
flowchart2d/: AxisInfoCtr.cpp  CMakeLists.txt  VersionInfo.rc  arrow.h  coloridentification.cpp  coloridentification.h  coloridentification.ui  conditionscomparison.cpp  conditionscomparison.h  convertformatform.cpp  convertformatform.h  convertformatform.ui  dataoutset.cpp  dataoutset.h  dataoutset.ui  diagramitem.cpp  diagramitem.h  diagramscene.h  diagramscene.qrc  diagramtextitem.h  flowchart.cpp  flowchart.h  form.cpp  form.h  form.ui  hdrparam.cpp  hdrparam.ui  imgProcess.h  imgoutparam.cpp  imgoutparam.h  imgoutparam.ui  imgsrcinform.cpp  imgsrcinform.h  imgsrcinform.ui  lambertianphotometricstereo.cpp  lambertianphotometricstereo.h  lambertianphotometricstereo.ui  main.cpp  motionmovparamform.ui  motionopter.cpp  (+34 more)
rxsFixdev/: CMakeLists.txt  rxsFixdev.sln
rxsFixdev/PropertySheet/: HkCream_R1.props  HkVmaster.props  SSZN_64R.props  cv49_for_vs2019.props  cv49_for_vs2019d.props  pcl1.10x64.props  pcl1.10x64R.props
rxsFixdev/SizectorAPI/: MPSizectorAPI.h
rxsFixdev/SystemEntry/: CMakeLists.txt  FactoryParamOpter.cpp  FlowerDescription.cpp  ImageableGather.cpp  MotionCombiner.cpp  MotionGpioSerialize.cpp  RealizeInterface.cpp  ResultReport.cpp  SysConfig.cpp  SystemEntry.cpp  SystemEntry.vcxproj  WorkParamOpter.cpp  WorkProcess.cpp  devCommunicationsServer.cpp  private.h  rxsMainFrame.cpp  rxsMainFrame.h  rxsResultReportGrpsManger.cpp
rxsFixdev/Tester/: CMakeLists.txt  CalibrationParam.txt  FixDalTest.cpp  HrdwDalTest.cpp  ImgProcTest.cpp  Tester.vcxproj  mainTester.cpp  uintTester.h
rxsFixdev/inkType/: inkFile.h  inkType.h
rxsFixdev/rxsFixdal/: CMakeLists.txt  DesignFilesImport.cpp  DesignFilesImport.h  Protected_StatisticalProcessControl.cpp  Robort.cpp  TCPClient.cpp  TCPClient.h  WorkProcess_Dal.cpp  devCommunicationsServer.cpp  global_sysOpter.cpp  imgProcessDal.cpp  myGather.cpp  protected.h  protected_ImageableGather.cpp  protected_rxsComputerTransfer.cpp  protected_rxsComputerTransferManger.h  protected_rxsResultReport.cpp  protected_rxsToolKit.cpp  protected_rxsToolKit.h  rxsFixdal.def  rxsFixdal.h  rxsFixdal.vcxproj  tcpServer.cpp  tcpServer.h
rxsFixdev/rxsHrdwdal/: AdjustFocal.cpp  AoccDal.cpp  AuboRobotDal.cpp  CMakeLists.txt  CST_LightSource.cpp  CST_TZ.cpp  DialGauge.cpp  HkCream_ch120.cpp  KeyenceLJX8000A.cpp  KeyenceSpectrum.cpp  MPSizectorS_Dal.cpp  NVTLineLsr.cpp  Precitec_Dal.cpp  SSZN_SR8060.cpp  ThreadSafeBuffer.cpp  ThreadSafeBuffer.h  Zmotion_Dal.cpp  compConnectioned.cpp  proteced.h  robotMotion_Dal.cpp  rxsHrdwdal.cpp  rxsHrdwdal.vcxproj
rxsFixdev/rxsImgProcess/: CMakeLists.txt  ColorReg.cpp  ComparisonStep.cpp  FormatConvertStep.cpp  HkVisonMaster.cpp  ImgMergingStep.cpp  ImgOutStep.cpp  ImgSourceStep.cpp  LambertianPhotoMetricstereo.cpp  LinkLister.cpp  PointCloudProcess.h  PointCouldArclenStep.cpp  PointCouldDeformMatch.cpp  PointCouldEmpLen.cpp  PointCouldFilterStep.cpp  PointCouldGapStep.cpp  PointCouldLength.cpp  PointCouldOutStep.cpp  PointCouldPoaslStep.cpp  PreProcessStep.cpp  ScanCode.cpp  ScanCodeStep.cpp  StepBlock.cpp  ThridPartyCallBlk.cpp  UseCustomStep_CR.cpp  UserCustomStep.cpp  calibration.cpp  extToolKit.cpp  hwCollections.cpp  imgProcess.cpp  imgProcess.h  imgTaskProcessCollection.cpp  imgTaskProcesser.cpp  imgToolKitBlock.cpp  motionMovStep.cpp  pcSourceStep.cpp  private.h  protected_rxsToolKit.cpp  protected_rxsToolKit.h  protected_rxsToolKit_2D.cpp  (+5 more)
rxsFixdev/rxsToolkit/: README(3).txt  readMe.txt
(+981 files in other folders)
